[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Zvi Baratz", email = "z.baratz@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["numpy>=1.20.0", "pydicom>=2.2.0"]
description = "Parse Siemens CSA header information"
dynamic = ["version"]
keywords = ["DICOM", "CSA", "MRI"]
license = "MIT"
name = "csa_header"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Documentation = "https://github.com/open-dicom/csa_header#readme"
Issues = "https://github.com/open-dicom/csa_header/issues"
Source = "https://github.com/open-dicom/csa_header"

[tool.hatch.version]
path = "csa_header/__about__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pre-commit", "pytest"]
[tool.hatch.envs.default.scripts]
cov = ["test-cov", "cov-report"]
cov-ci = ["test-cov", "cov-xml"]
cov-report = ["- coverage combine", "coverage report"]
cov-xml = ["cov-report", "coverage xml"]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"

[tool.hatch.envs.lint]
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "pytest", "ruff>=0.0.243"]
detached = true
[tool.hatch.envs.lint.scripts]
all = ["style", "typing"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
style = ["ruff {args:.}", "black --check --diff {args:.}"]
typing = "mypy --install-types --non-interactive {args:csa_header tests}"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py37"]

[tool.ruff]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027", # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003", # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107", # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
ignore-init-module-imports = true
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "TID",
  "UP",
  "W",
  "YTT",
]
target-version = "py37"
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["csa_header"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
branch = true
command_line = "-m pytest tests"
omit = ["csa_header/__about__.py"]
parallel = true
source_pkgs = ["csa_header", "tests"]

[tool.coverage.paths]
csa_header = ["csa_header", "*/csa_header/csa_header"]
tests = ["tests", "*/csa_header/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
